--- a/index.html
+++ b/index.html
@@ -15,7 +15,22 @@
 <body>
     <header class="cabeçalho">
         <div class="container">
-            <span class="cabeçalho__menu-hamburguer container__imagem"> </span>
+            <input type="checkbox" name="" id="menu" class="container__botao">
+            <label for="menu">
+            <span class="cabeçalho__menu-hamburguer container__imagem"></span></label> 
+            <ul class="lista-menu">
+             <li class="lista-menu__titulo">Categoria</li>
+             <li class="lista-menu__item"><a href="#"
+             class="lista-menu__link">Programação</a></li>
+             <li class="lista-menu__item"><a href="#"
+             class="lista-menu__link">Front-end</a></li>
+             <li class="lista-menu__item"><a href="#"
+              class="lista-menu__link">Infraestrutura</a></li>
+             <li class="lista-menu__item"><a href="#"
+             class="lista-menu__link">Businss</a></li>
+             <li class="lista-menu__item"><a href="#"
+             class="lista-menu__link">Desing & UX</a></li>
+            </ul>
             <img src="img/Logo.svg" alt="logo alurabooks" class="container__imagem">
         </div>
 
