--- a/index.html
+++ b/index.html
@@ -65,6 +65,10 @@
       <!-- Additional required wrapper -->
       <div class="swiper-wrapper">
         <!-- Slides -->
+          <!-- If we need navigation buttons -->
+      <div class="swiper-button-prev"></div>
+      <div class="swiper-button-next"></div>
+
         <div class="swiper-slide"><img src="img/ApacheKafka.svg" alt="Livro sobre ApacheKafka"></div>
         <div class="swiper-slide"><img src="img/Liderança.svg" alt="Livro sobre Liderança"></div>
         <div class="swiper-slide"><img src="img/Javascript.svg" alt="Livro sobre Javascript"></div>
@@ -73,35 +77,83 @@
         <div class="swiper-slide"><img src="img/Acessibilidade.svg" alt="Livro sobre Acessibilidade"></div>
 
       </div>
-      <div class="card">
-        <div class="card__descricao">
-          <div class="descricao">
-            <h2 class="descricao__titulo">Talvez você possa se interessar por...</h2>
-            <h3 class="descricao__titulo-livro">Angular 11 e Firebase</h3>
-            <p class="descricao__texto">Contruindo uma aplicação integrada com a plataforma Google</p>
-          </div>
-          <img src="img/Angular.svg" alt="Livro Angular">
+         
+    </div>
+
+    <div class="card">
+      <div class="card__descricao">
+        <div class="descricao">
+          <h2 class="descricao__titulo">Talvez você possa se interessar por...</h2>
+          <h3 class="descricao__titulo-livro">Angular 11 e Firebase</h3>
+          <p class="descricao__texto">Contruindo uma aplicação integrada com a plataforma Google</p>
         </div>
-        <div class="card__botoes">
-          <ul class="botoes">
-            <li class="botoes__item">
-              <img src="img/Favoritos.svg" alt="Favoritar livro">
-            </li>
-            <li class="botoes__item">
-              <img src="img/Compras.svg" alt="Colocar no carrinho de compras">
-            </li>
-          </ul>
-          <a href="#" class="botoes__ancora">Saiba mais</a>
+        <img src="img/Angular.svg" alt="Livro Angular">
+      </div>
+      <div class="card__botoes">
+        <ul class="botoes">
+          <li class="botoes__item">
+            <img src="img/Favoritos.svg" alt="Favoritar livro">
+          </li>
+          <li class="botoes__item">
+            <img src="img/Compras.svg" alt="Colocar no carrinho de compras">
+          </li>
+        </ul>
+        <a href="#" class="botoes__ancora">Saiba mais</a>
+      </div>
+    </div>
+    <div class="card">
+      <div class="card__descricao">
+        <div class="descricao">
+          <img src="img/Estrelinhas.png" alt="Estrelinhas">
+          <h2 class="descricao__titulo">Autora do mês</h2>
+          <h3 class="descricao__titulo-livro">Juliana Agarikov</h3>
+          <p class="descricao__texto">Analista de sistemas e escritora, Juliana é especialista em Front-end</p>
         </div>
+        <img src="img/Perfil-escritora 1.png" alt="Livro Angular">
+      </div>
+      <div class="card__botoes">
+        <ul class="botoes">
+          <li class="botoes__item">
+            <img src="img/Favoritos.svg" alt="Favoritar livro">
+          </li>
+          <li class="botoes__item">
+            <img src="img/Compras.svg" alt="Colocar no carrinho de compras">
+          </li>
+        </ul>
+        <a href="#" class="botoes__ancora">Saiba mais</a>
       </div>
     </div>
 
-    <!-- If we need navigation buttons -->
-    <div class="swiper-button-prev"></div>
-    <div class="swiper-button-next"></div>
-    </div>
 
   </section>
+
+
+  <section class="tópicos">
+    <h2 class="tópicos__titulo">TÓPICOS VISITADOS RECENTEMENTE</h2>
+    <ul class="tópicos__lista">
+      <li class="tópicos__item"><a href="#" class="tópicos__link">Android</a></li>
+      <li class="tópicos__item"><a href="#" class="tópicos__link">Marketing digital</a></li>
+      <li class="tópicos__item"><a href="#" class="tópicos__link">Agile</a></li>
+      <li class="tópicos__item"><a href="#" class="tópicos__link">Startups</a></li>
+      <li class="tópicos__item"> <a href="#" class="tópicos__link">HTML & CSS</a></li>
+      <li class="tópicos__item"> <a href="#" class="tópicos__link">Python</a></li>
+      <li class="tópicos__item"> <a href="#" class="tópicos__link">OO</a></li>
+      <li class="tópicos__item"> <a href="#" class="tópicos__link">Java</a></li>
+    </ul>
+  </section>
+
+
+
+
+
+
+</ul>
+  </section>
+
+
+
+
+
 
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
