--- a/index.html
+++ b/index.html
@@ -143,13 +143,18 @@
   </section>
 
 
-
-
-
-
 </ul>
   </section>
+<section class="contato">
+  <h2 class="contato__titulo">Fique por dentro das novidade!</h2>
+  <p class="contato__texto">Atualizaçôes de e-books, novos livros, promoções e outros.</p>
+  <input type="email" placeholder="Cadastre seu email" class="contato__email">
+</section>
 
+<hr/>
+<footer class="rodape">
+  <h2 class="rodape__titulo">Grupo Alura</h2>
+</footer>
 
 
 
